--- a/static/less/richtext.less
+++ b/static/less/richtext.less
@@ -632,6 +632,12 @@
   }
 }
 
+[data-ui-markdown],
+[data-ui-richtext] {
+  overflow-x: auto;
+  overflow-wrap: break-word
+}
+
 @media screen and (max-width: 768px) {
   .ProsemirrorEditor.focusMenu {
     .ProseMirror-menubar {
